# katas

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  catalog-info.yaml  docker-compose.yml
bank-kata/: Cargo.toml
bank-kata/src/: account.rs  lib.rs  main.rs  transaction_handler.rs
birthday-greetings-kata/: Cargo.toml  LICENSE  README.md
birthday-greetings-kata/src/: lib.rs  main.rs
birthday-greetings-kata/src/domain/: calendar.rs  date.rs  employee.rs  greetings_formatter.rs  mod.rs
birthday-greetings-kata/src/integrations/: email_greetings_formatter.rs  flatfile_employees.rs  local_calendar.rs  mod.rs
birthday-greetings-kata/src/use_cases/: mod.rs
birthday-greetings-kata/tests/: greetings.rs  greetings_email_integration.rs  greetings_flat_file_integration.rs  test_api.rs
birthday-greetings-kata/tests/assets/: employees.txt
config/: .env.dist.local
examples/: insomnia.json
goose-game/: Cargo.toml  README.md
goose-game/src/domain/: die.rs  game.rs  mod.rs  player.rs
goose-game/src/integrations/: mod.rs  random_dice_roller.rs
goose-game/src/use_cases/: add_player.rs  mod.rs  move_player.rs
goose-game/tests/: game.rs  test_api.rs
prima-pair-programming-exercise-v2/src/domain/: mod.rs  upsell_opportunity.rs
rust/: Cargo.toml
rust/src/: main.rs
rust/src/domain/: mod.rs  owned_vehicle.rs  (+2 more)
src/: main.rs
test/: Cargo.toml  Makefile.toml  README.md  catalog-info.yaml  docker-compose.yml
test/config/: .env.dist.local
test/examples/: insomnia.json
test/src/: startup.rs
tests/end_to_end/: localauth0.rs  test_app.rs
(+5 files in other folders)
